# rsomics-fpkm-count

./: Cargo.toml  README.md
benches/: bench.rs  fpkm_count.rs
src/: bed.rs  cli.rs  count.rs  lib.rs  main.rs  output.rs  strand.rs
tests/: compat.rs
tests/golden/: expected.FPKM.xls  genes.bed12  sample.bam  sample.bam.bai
