[package]
name = "rsomics-fpkm-count"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-fpkm-count"
authors = ["Zane Leong <efd@live.com>"]
description = "Compute per-gene FPKM from a BAM + BED12 model — Rust port of RSeQC FPKM_count"

[[bin]]
name = "rsomics-fpkm-count"
path = "src/main.rs"


[lib]
name = "rsomics_fpkm_count"
path = "src/lib.rs"
doctest = false
[[bench]]
name = "fpkm_count"
harness = false

[dependencies]
rsomics-common = "0.6"
noodles = { version = "0.110", features = ["bam", "sam"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
